# cuda_cmake_so

./: .gitignore  CMakeLists.txt  Readme.md  call_minimal_gpu.h  minimal.cuh  test_minimal.c  test_minimal.cpp  test_minimal.cu
cmake38_or_higher/: CMakeLists.txt
cmake3x/: CMakeLists.txt
details/: call_minimal.cu  call_minimal_cpu.cpp  call_minimal_gpu.cu  minimal.cu
impl/: call_minimal.h  call_minimal_cpu.h  minimal.cuh
